# echoNet

./: README.md  meson.build
src/: chat.c  chatClient.c  chatRoom.c  chatRoom.h  chatServer.c  client.c  client.h  clientInterface.c  clientInterface.h  hello.c  message.c  message.h  protocol.c  protocol.h  server.c  server.h  user.c  user.h
tests/: test_hello.c  test_server.c
